--- a/environment.yml
+++ b/environment.yml
@@ -1,95 +1,309 @@
-name: cemrl
+name: cemrl-edited
 channels:
+  - pytorch
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _openmp_mutex=4.5=1_gnu
+  - aiohttp=3.8.1=py39h7f8727e_1
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - antlr-python-runtime=4.8=pyhd8ed1ab_3
+  - anyio=3.5.0=py39h06a4308_0
+  - argon2-cffi=20.1.0=py39h27cfd23_1
+  - async-timeout=4.0.1=pyhd3eb1b0_0
+  - async_generator=1.10=pyhd3eb1b0_0
+  - attrs=21.2.0=pyhd3eb1b0_0
+  - babel=2.9.1=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py36_0
-  - cffi=1.13.2=py36h2e261b9_0
-  - cudatoolkit=10.0.130=0
-  - intel-openmp=2019.4=243
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - mkl=2019.4=243
-  - mkl-service=2.3.0=py36he904b0f_0
-  - mkl_fft=1.0.15=py36ha843d7b_0
-  - mkl_random=1.1.0=py36hd6b4f25_0
-  - ncurses=6.1=he6710b0_1
-  - ninja=1.9.0=py36hfd86e86_0
-  - numpy-base=1.18.1=py36hde5b4d6_1
-  - openssl=1.1.1d=h7b6447c_3
-  - pip=20.0.2=py36_1
-  - python=3.6.10=h0371630_0
-  - readline=7.0=h7b6447c_5
-  - setuptools=45.1.0=py36_0
-  - six=1.14.0=py36_0
-  - sqlite=3.30.1=h7b6447c_0
-  - tk=8.6.8=hbc83047_0
-  - wheel=0.34.1=py36_0
-  - xz=5.2.4=h14c3975_4
+  - bleach=4.0.0=pyhd3eb1b0_0
+  - blinker=1.4=py39h06a4308_0
+  - blosc=1.21.0=h8c45485_0
+  - bottleneck=1.3.2=py39hdd57654_1
+  - brotli=1.0.9=he6710b0_2
+  - brotlipy=0.7.0=py39h27cfd23_1003
+  - brunsli=0.1=h2531618_0
+  - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.18.1=h7f8727e_0
+  - ca-certificates=2022.3.29=h06a4308_1
+  - certifi=2021.10.8=py39h06a4308_2
+  - cffi=1.14.6=py39h400218f_0
+  - cfitsio=3.470=hf0d0db6_6
+  - charls=2.2.0=h2531618_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cloudpickle=1.6.0=pyhd3eb1b0_0
+  - cryptography=3.4.7=py39hd23ed53_0
+  - cudatoolkit=10.2.89=hfd86e86_1
+  - cycler=0.10.0=py39h06a4308_0
+  - cytoolz=0.11.0=py39h27cfd23_0
+  - dask-core=2022.2.1=pyhd3eb1b0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
+  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.4.1=py39h295c915_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - docker-pycreds=0.4.0=pyhd3eb1b0_0
+  - entrypoints=0.3=py39h06a4308_0
+  - expat=2.4.1=h2531618_2
+  - ffmpeg=4.3=hf484d3e_0
+  - fontconfig=2.13.1=h6c09931_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.10.4=h5ab3b9f_0
+  - frozenlist=1.2.0=py39h7f8727e_0
+  - fsspec=2022.2.0=pyhd3eb1b0_0
+  - future=0.18.2=py39h06a4308_1
+  - giflib=5.2.1=h7b6447c_0
+  - gitdb=4.0.7=pyhd3eb1b0_0
+  - gitpython=3.1.18=pyhd3eb1b0_1
+  - glib=2.69.1=h5202010_0
+  - gmp=6.2.1=h2531618_2
+  - gnutls=3.6.15=he1e5248_0
+  - google-auth-oauthlib=0.4.1=py_2
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - hydra-core=1.1.1=pyhd8ed1ab_0
+  - icu=58.2=he6710b0_3
+  - idna=3.2=pyhd3eb1b0_0
+  - imagecodecs=2021.8.26=py39h4cda21f_0
+  - imageio=2.9.0=pyhd3eb1b0_0
+  - importlib-metadata=4.8.1=py39h06a4308_0
+  - importlib_metadata=4.8.1=hd3eb1b0_0
+  - importlib_resources=5.2.0=pyhd3eb1b0_1
+  - iniconfig=1.1.1=pyhd3eb1b0_0
+  - intel-openmp=2021.3.0=h06a4308_3350
+  - ipykernel=6.2.0=py39h06a4308_1
+  - ipython=7.27.0=py39hb070fc8_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=7.6.4=pyhd3eb1b0_0
+  - jedi=0.18.0=py39h06a4308_1
+  - jinja2=3.0.1=pyhd3eb1b0_0
+  - joblib=1.0.1=pyhd3eb1b0_0
+  - jpeg=9d=h7f8727e_0
+  - json5=0.9.6=pyhd3eb1b0_0
+  - jsonschema=3.2.0=pyhd3eb1b0_2
+  - jupyter=1.0.0=py39h06a4308_7
+  - jupyter_client=7.0.1=pyhd3eb1b0_0
+  - jupyter_console=6.4.0=pyhd3eb1b0_0
+  - jupyter_core=4.7.1=py39h06a4308_0
+  - jupyter_server=1.13.5=pyhd3eb1b0_0
+  - jupyterlab=3.3.2=pyhd3eb1b0_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_server=2.10.3=pyhd3eb1b0_1
+  - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+  - jxrlib=1.1=h7b6447c_2
+  - kiwisolver=1.3.1=py39h2531618_0
+  - krb5=1.19.2=hac12032_0
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.35.1=h7274673_9
+  - lerc=3.0=h295c915_0
+  - libaec=1.0.4=he6710b0_1
+  - libcurl=7.82.0=h0b77cf5_0
+  - libdeflate=1.8=h7f8727e_5
+  - libedit=3.1.20210910=h7f8727e_0
+  - libev=4.33=h7f8727e_1
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=9.3.0=h5101ec6_17
+  - libgfortran-ng=7.5.0=ha8ba4b0_17
+  - libgfortran4=7.5.0=ha8ba4b0_17
+  - libgomp=9.3.0=h5101ec6_17
+  - libiconv=1.15=h63c8f33_5
+  - libidn2=2.3.2=h7f8727e_0
+  - libnghttp2=1.46.0=hce63b2e_0
+  - libpng=1.6.37=hbc83047_0
+  - libprotobuf=3.17.2=h4ff587b_1
+  - libsodium=1.0.18=h7b6447c_0
+  - libssh2=1.9.0=h1ba5d50_1
+  - libstdcxx-ng=9.3.0=hd4cf53a_17
+  - libtasn1=4.16.0=h27cfd23_0
+  - libtiff=4.2.0=h85742a9_0
+  - libunistring=0.9.10=h27cfd23_0
+  - libuuid=1.0.3=h1bed415_2
+  - libuv=1.40.0=h7b6447c_0
+  - libwebp=1.2.0=h89dd481_0
+  - libwebp-base=1.2.0=h27cfd23_0
+  - libxcb=1.14=h7b6447c_0
+  - libxml2=2.9.12=h03d6c58_0
+  - libzopfli=1.0.3=he6710b0_0
+  - locket=0.2.1=py39h06a4308_2
+  - lz4-c=1.9.3=h295c915_1
+  - markdown=3.3.4=py39h06a4308_0
+  - markupsafe=2.0.1=py39h27cfd23_0
+  - matplotlib=3.4.2=py39h06a4308_0
+  - matplotlib-base=3.4.2=py39hab158f2_0
+  - matplotlib-inline=0.1.2=pyhd3eb1b0_2
+  - mistune=0.8.4=py39h27cfd23_1000
+  - mkl=2021.3.0=h06a4308_520
+  - mkl-service=2.4.0=py39h7f8727e_0
+  - mkl_fft=1.3.0=py39h42c9631_2
+  - mkl_random=1.2.2=py39h51133e4_0
+  - more-itertools=8.10.0=pyhd3eb1b0_0
+  - multidict=5.2.0=py39h7f8727e_2
+  - munkres=1.1.4=py_0
+  - nbclassic=0.3.5=pyhd3eb1b0_0
+  - nbclient=0.5.3=pyhd3eb1b0_0
+  - nbconvert=6.1.0=py39h06a4308_0
+  - nbformat=5.1.3=pyhd3eb1b0_0
+  - ncurses=6.3=h7f8727e_2
+  - nest-asyncio=1.5.1=pyhd3eb1b0_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=2.7.1=pyhd3eb1b0_0
+  - ninja=1.10.2=hff7bd54_1
+  - notebook=6.4.3=py39h06a4308_0
+  - numexpr=2.7.3=py39h22e1b3c_1
+  - numpy=1.20.3=py39hf144106_0
+  - numpy-base=1.20.3=py39h74d4b33_0
+  - oauthlib=3.2.0=pyhd3eb1b0_0
+  - olefile=0.46=pyhd3eb1b0_0
+  - omegaconf=2.1.1=py39hf3d152e_1
+  - openh264=2.1.0=hd408876_0
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=1.1.1n=h7f8727e_0
+  - packaging=21.0=pyhd3eb1b0_0
+  - pandas=1.3.4=py39h8c16a72_0
+  - pandocfilters=1.4.3=py39h06a4308_1
+  - parso=0.8.2=pyhd3eb1b0_0
+  - partd=1.2.0=pyhd3eb1b0_1
+  - pathtools=0.1.2=pyhd3eb1b0_1
+  - pcre=8.45=h295c915_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=8.3.1=py39h2c7a002_0
+  - pip=21.2.4=py37h06a4308_0
+  - pluggy=0.13.1=py39h06a4308_0
+  - posix_ipc=1.0.4=py39h27cfd23_0
+  - prometheus_client=0.11.0=pyhd3eb1b0_0
+  - promise=2.3=py39h06a4308_0
+  - prompt-toolkit=3.0.17=pyhca03da5_0
+  - prompt_toolkit=3.0.17=hd3eb1b0_0
+  - psutil=5.8.0=py39h27cfd23_1
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - py=1.10.0=pyhd3eb1b0_0
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pycparser=2.20=py_2
+  - pyglet=1.5.16=py39hf3d152e_0
+  - pygments=2.10.0=pyhd3eb1b0_0
+  - pyjwt=2.1.0=py39h06a4308_0
+  - pyopenssl=20.0.1=pyhd3eb1b0_1
+  - pyparsing=3.0.4=pyhd3eb1b0_0
+  - pyqt=5.9.2=py39h2531618_6
+  - pyrsistent=0.18.0=py39h7f8727e_0
+  - pysocks=1.7.1=py39h06a4308_0
+  - pytest=6.2.4=py39h06a4308_2
+  - python=3.9.7=h12debd9_1
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.9=2_cp39
+  - pytorch=1.9.1=py3.9_cuda10.2_cudnn7.6.5_0
+  - pytz=2021.3=pyhd3eb1b0_0
+  - pywavelets=1.3.0=py39h7f8727e_0
+  - pyzmq=22.2.1=py39h295c915_1
+  - qt=5.9.7=h5867ecd_1
+  - qtconsole=5.1.1=pyhd3eb1b0_0
+  - qtpy=1.10.0=pyhd3eb1b0_0
+  - readline=8.1=h27cfd23_0
+  - requests=2.26.0=pyhd3eb1b0_0
+  - requests-oauthlib=1.3.0=py_0
+  - scikit-image=0.19.2=py39h51133e4_0
+  - scikit-learn=1.0.1=py39h51133e4_0
+  - scipy=1.7.1=py39h292c36d_2
+  - seaborn=0.11.2=pyhd3eb1b0_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
+  - sentry-sdk=1.5.10=pyhd8ed1ab_0
+  - setproctitle=1.2.2=py39h27cfd23_1004
+  - setuptools=58.0.4=py39h06a4308_0
+  - shortuuid=1.0.8=py39hf3d152e_0
+  - sip=4.19.13=py39h2531618_0
+  - six=1.16.0=pyhd3eb1b0_0
+  - smmap=4.0.0=pyhd3eb1b0_0
+  - snappy=1.1.9=h295c915_0
+  - sniffio=1.2.0=py39h06a4308_1
+  - sqlite=3.36.0=hc218d9a_0
+  - tabulate=0.8.9=py39h06a4308_0
+  - tensorboard=2.6.0=py_1
+  - tensorboard-data-server=0.6.0=py39hca6d32c_0
+  - tensorboard-plugin-wit=1.6.0=py_0
+  - tensorboardx=2.2=pyhd3eb1b0_0
+  - termcolor=1.1.0=py39h06a4308_1
+  - terminado=0.9.4=py39h06a4308_0
+  - testpath=0.5.0=pyhd3eb1b0_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
+  - tifffile=2021.7.2=pyhd3eb1b0_2
+  - tk=8.6.11=h1ccaba5_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - toolz=0.11.2=pyhd3eb1b0_0
+  - torchaudio=0.9.1=py39
+  - torchvision=0.2.2=py_3
+  - tornado=6.1=py39h27cfd23_0
+  - traitlets=5.1.0=pyhd3eb1b0_0
+  - typing-extensions=3.10.0.2=hd3eb1b0_0
+  - typing_extensions=3.10.0.2=pyh06a4308_0
+  - tzdata=2021a=h5d7bf9c_0
+  - urllib3=1.26.6=pyhd3eb1b0_1
+  - wandb=0.12.14=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py39h06a4308_1
+  - websocket-client=0.58.0=py39h06a4308_4
+  - werkzeug=2.0.3=pyhd3eb1b0_0
+  - wheel=0.37.0=pyhd3eb1b0_1
+  - widgetsnbextension=3.5.1=py39h06a4308_0
+  - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.5=h7b6447c_0
+  - zeromq=4.3.4=h2531618_0
+  - zfp=0.5.5=h295c915_6
+  - zipp=3.5.0=pyhd3eb1b0_0
   - zlib=1.2.11=h7b6447c_3
+  - zstd=1.4.9=haebb681_0
   - pip:
-    - aiohttp==3.6.2
-    - async-timeout==3.0.1
-    - attrs==19.3.0
-    - beautifulsoup4==4.8.2
-    - chardet==3.0.4
-    - click==7.0
-    - cloudpickle==1.2.2
-    - colorama==0.4.3
-    - cycler==0.10.0
-    - cython==0.29.14
-    - filelock==3.0.12
-    - funcsigs==1.0.2
-    - future==0.18.2
-    - glfw==1.10.1
-    - google==2.0.3
-    - grpcio==1.27.2
+    - absl-py==1.0.0
+    - aiohttp-cors==0.7.0
+    - aioredis==1.3.1
+    - blessings==1.7
+    - cached-property==1.5.2
+    - cachetools==4.2.4
+    - click==8.0.1
+    - colorful==0.5.4
+    - cython==0.29.24
+    - decorator==4.4.2
+    - dm-control==1.0.2
+    - dm-env==1.5
+    - dm-tree==0.1.7
+    - fasteners==0.16.3
+    - filelock==3.1.0
+    - glfw==2.2.0
+    - google-api-core==2.2.2
+    - google-auth==2.3.3
+    - googleapis-common-protos==1.53.0
+    - gpustat==0.6.0
+    - grpcio==1.41.0
     - gtimer==1.0.0b5
-    - gym==0.15.4
-    - idna==2.8
-    - idna-ssl==1.1.0
-    - imageio==2.6.1
-    - importlib-metadata==1.5.0
-    - joblib==0.14.1
-    - jsonschema==3.2.0
-    - kiwisolver==1.1.0
-    - lockfile==0.12.2
-    - matplotlib==3.1.3
-    - more-itertools==8.2.0
-    - mujoco-py==1.50.1.68
-    - multidict==4.7.5
+    - gym==0.12.1
+    - hiredis==2.0.0
+    - hydra-submitit-launcher==1.1.6
+    - imageio-ffmpeg==0.4.7
+    - ipdb==0.13.9
+    - labmaze==1.0.5
+    - lxml==4.8.0
+    - moviepy==1.0.3
+    - msgpack==1.0.2
+    - mujoco==2.1.5
+    - mujoco-py==2.0.2.13
     - nose==1.3.7
-    - numpy==1.16.1
-    - opencv-python==4.1.2.30
-    - packaging==20.3
-    - pillow==7.0.0
-    - pluggy==0.13.1
-    - protobuf==3.11.3
-    - py==1.8.1
-    - py-spy==0.3.3
-    - pycparser==2.19
-    - pyglet==1.3.2
-    - pyopengl==3.1.5
-    - pyparsing==2.4.6
-    - pyrsistent==0.15.7
-    - pytest==5.4.1
-    - python-dateutil==2.8.1
-    - pyyaml==5.3
-    - ray==0.8.2
-    - redis==3.4.1
-    - requests==2.22.0
-    - scipy==1.4.1
-    - soupsieve==2.0
-    - torch==1.4.0
-    - typing-extensions==3.7.4.1
-    - urllib3==1.25.8
-    - wcwidth==0.1.8
-    - yarl==1.4.2
-    - zipp==3.1.0
-
+    - nvidia-ml-py3==7.352.0
+    - opencensus==0.8.0
+    - opencensus-context==0.1.2
+    - opencv-python==4.5.4.58
+    - proglog==0.1.9
+    - protobuf==3.18.0
+    - py-spy==0.3.11
+    - pyasn1-modules==0.2.8
+    - pygame==2.1.2
+    - pyopengl==3.1.6
+    - pyyaml==5.4.1
+    - ray==1.6.0
+    - redis==3.5.3
+    - rsa==4.8
+    - submitit==1.4.2
+    - tqdm==4.64.0
+    - yapf==0.32.0
+    - yarl==1.7.2
+prefix: /home/philipp/miniconda3/envs/cemrl-edited
